Second commit, minor changes

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </header>
     <main>
       <section id="about">
-        <h2>About Me</h2>
+        <h2><u>About Me</u></h2>
         <p>Hello! My name is Kevin and I am a Computer Science student and an aspiring software engineer. I have a passion for creating high-quality and user-friendly applications, and I am constantly learning and improving my skills. In my free time, I enjoy teaching and playing chess, as well as directing chess tournaments.</p>
       </section> 
       <section id="chess">
-        <h2>Chess</h2>
+        <h2><u>Chess</u></h2>
         <div class="iframe-container">
           <div class="iframe-wrapper">
               <h4>Chess.com Daily Puzzle:</h4>
@@ -41,25 +41,27 @@
         </div>
       </section>
       <section id="skills">
-        <h2>Skills</h2>
+        <h2><u>Skills</u></h2>
         <ul>
           <li>C++</li>
           <li>HTML/CSS</li>
           <li>JavaScript</li>
-          <li>Python</li>
+          <li>Python</li> 
+          <li>SQL</li> 
+          <li>R</li>
         </ul>
       </section>
       <section id="projects">
-        <h2>Projects</h2>
+        <h2><u>Projects</u></h2>
         <h3>Weather App</h3>
-        <p>A simple weather app that allows users to enter their location and get real-time weather data.</p><br>
+        <p>A simple weather app that allows users to enter their location and get real-time weather data.</p><hr>
         <h3>To-Do List</h3>
-        <p>A to-do list app that allows users to add, remove, and mark items as complete.</p><br>
+        <p>A to-do list app that allows users to add, remove, and mark items as complete.</p><hr>
         <h3>USCF Live Ratings Web Scraper</h3> 
         <p>A tool that allows users to easily search up to 30 players given their USCF IDs and returns the information in under 60 seconds. I built this in response to the USCF websites slow loading time and which took up a lot of time when I was trying to check the ratings of my students or when I had to use live ratings for a chess tournament. Future plans are to make it more scalable and allow users to search for even more players, while also presenting more information. <a href="https://uscf-parser2-u56dtlt5g-kevinfasc6.vercel.app/"> Version 1</a> is ready and can be accessed. Currently working on <a href="https://uscf-live-scraper-kevinfasc6.vercel.app/">Version 2.</a></p> 
       </section>
       <section id="contact">
-        <h2>Contact</h2>
+        <h2><u>Contact</u></h2>
         <form name="contactForm" 
         action="https://formspree.io/f/xyyqpgev"
         method="POST">
@@ -70,7 +72,8 @@
           <label for="message">Message:</label><br>
           <textarea id="message" name="message" rows="5" cols="40"></textarea><br>
           <input type="submit" value="Submit">
-        </form> 
+        </form>  
+        <p>Created using Formspree</p>
       </section>
     </main>
     <footer>
