Added Favicon and animation to header

--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     <title>My Personal Website</title>
-    <link rel="stylesheet" type="text/css" href="style.css"> 
-    <script src="script.js" async defer></script>
+    <link rel="stylesheet" type="text/css" href="style.css">  
+    <link rel="icon" href="./imgs/favicon.png">
+    <script src="script.js" async defer></script> 
   </head>
   <body>
-    <header>
-      <h1>Welcome to My Personal Website</h1>
+    <header> 
+      <div class="content">
+        <h1>Welcome to My Personal Website</h1>  
+        <h1>Welcome to My Personal Website</h1> 
+      </div>
       <nav>
         <ul id="menu">
           <li><a href="#about">About Me</a></li> 
@@ -42,13 +46,13 @@
       </section>
       <section id="skills">
         <h2><u>Skills</u></h2>
-        <ul>
-          <li>C++</li>
+        <ul> 
+          <li>R</li>
+          <li>C++</li> 
+          <li>SQL</li>  
+          <li>Python</li> 
           <li>HTML/CSS</li>
           <li>JavaScript</li>
-          <li>Python</li> 
-          <li>SQL</li> 
-          <li>R</li>
         </ul>
       </section>
       <section id="projects">
